SFA01Shared/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>SmartBIZ Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartBIZ Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic IPVPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic IPVPN Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic IPVPN Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic IPVPN Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro-E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <controllingField>Product__c</controllingField>
            <picklistValues>
                <fullName>Bandwidth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro-E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM ISDN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>